implemented ability to register a new user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.liquibase.enabled=false
+
+server.tomcat.relaxed-path-chars=[, ], |
+server.tomcat.relaxed-query-chars=[,],|,{,},^
