added additional fields to class Product

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.liquibase.enabled=false
 
+server.servlet.context-path=/wine-shop
+
 server.tomcat.relaxed-path-chars=[, ], |
 server.tomcat.relaxed-query-chars=[,],|,{,},^
