--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.liquibase.enabled=false
 
+logging.level.org.hibernate.SQL=DEBUG
+
 server.servlet.context-path=/wine-shop
 
 server.tomcat.relaxed-path-chars=[, ], |
