--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
+#DB configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/wine-app
 spring.datasource.username=root
-spring.datasource.password=4538
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -11,3 +12,7 @@ server.servlet.context-path=/wine-shop
 
 server.tomcat.relaxed-path-chars=[, ], |
 server.tomcat.relaxed-query-chars=[,],|,{,},^
+
+#JWT configuration
+security.jwt.token.secret-key=SeCret_Key_HIDDEN_MESSAGE_hello_friends!
+security.jwt.token.expire-length=604800000
